@@ -196,6 +196,11 @@ parameters and authentication."
   :set (lambda (sym val)
          (set sym (if (functionp val) (funcall val) val))))
 
+(defcustom erc-rename-buffers nil
+  "When this is set to t, buffers will be renamed to network name if available"
+  :group 'erc
+  :type 'boolean)
+
 (defvar erc-password nil
   "Password to use when authenticating to an IRC server.
 It is not strictly necessary to provide this, since ERC will
@@ -1791,10 +1796,6 @@ buffer rather than a server buffer.")
 (defvar erc-nick-change-attempt-count 0
   "Used to keep track of how many times an attempt at changing nick is made.")
 (make-variable-buffer-local 'erc-nick-change-attempt-count)
-
-(defvar erc-rename-buffer-p nil
-  "When this is set to t, buffers will be renamed to network name if available")
-(make-variable-buffer-local 'erc-rename-buffer-p)
 
 (defun erc-migrate-modules (mods)
   "Migrate old names of ERC modules to new ones."
@@ -6231,7 +6232,7 @@ shortened server name instead."
                    "@" network-name))
           ((and network-name
                 (not (get-buffer network-name)))
-           (when erc-rename-buffer-p
+           (when erc-rename-buffers
 	     (rename-buffer network-name))
            network-name)
           (t (buffer-name (current-buffer))))))
