@@ -1,3 +1,8 @@
+2014-10-03  Kelvin White  <kwhite@gnu.org>
+
+	* erc.el (erc-rename-buffers): Use defcustom instead of defvar for
+	buffer renaming configuration option.
+
 2014-10-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* erc.el (erc-nick-at-point): Fix format-string typo (Bug#17755).
